corrected media responsitivity and stuck footer to bottom of screen

--- a/assets/style.css
+++ b/assets/style.css
@@ -9,7 +9,6 @@
 
 body {
     margin: 0px;
-    position: fixed;
     width: 100%;
 }
 
@@ -113,12 +112,17 @@ header {
     }
 }
 
+
 /* Fin partie CSS Header - navbar PAULINE */
 
  /* ********* DEBUT DU FOOTER (DEV : COLIN) ******** */
 
  footer{
+    position: absolute;
+    top: 100;
+    width: 100%;
     text-align: center;
+    margin-top: 50px;
  
   }  
   #footer_section {
@@ -132,9 +136,9 @@ header {
     text-align: center;
     height: 110px;
 	  margin: auto;
-	  border-radius: 18px;
+	  border-top-left-radius: 18px;
+    border-top-right-radius: 18px;
 	  width: 100%;
-	  
   }
   
   #footer_section .icon {
@@ -287,7 +291,7 @@ input[type=text], textarea {
     align-content: center;
     width: 100%;
     padding: 3px;
-    border: 0 solid rgb(223, 221, 221);
+    border: 1px solid black;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     padding-left: 10px;
@@ -295,9 +299,10 @@ input[type=text], textarea {
 
 input[type=submit] {
     width: 40%;
+    height: 50px;
     padding: 3px;
     margin: 5px;
-    border: 0px solid rgb(240, 215, 117);
+    border: 1px solid black;
     border-radius: 10px;
     margin-left: 50%;
 }
@@ -309,24 +314,26 @@ input[type=submit] {
 }
 
 .error-div {
-  font-size: x-small;
   position: absolute;
-  justify-content: center;
-  text-align: center;
-  top: -5px;
-  right: -10px;
+  font-size: small bold;
+  top: -10px;
+  right: 0;
   color: black;
-  background:rgb(226, 189, 23);
+  background:rgb(224, 75, 30);
   border: 1px solid ;
-  border-radius: -20px;
-  height: 30px;
-  width: 80px;
-  padding-left: 5px;
+  height: 35px;
+  width: auto;
+  max-width: 50%;
+  padding: 0 5px;
 }
-
+@media (max-width : 750px) {
+  .error-div {
+    font-size: x-small;
+  } 
+}
 .arrow-left {
   position: absolute;
-  top:29px;
+  top:34px;
   left: -1px;
   height : 0;
   width : 0;
@@ -335,7 +342,7 @@ input[type=submit] {
 }
 .arrow-right {
   position: absolute;
-  top:29px;
+  top:34px;
   left:9px;
   height : 0;
   width : 0;
@@ -349,8 +356,11 @@ textarea.required {
 }
 
 .required {
-    border: 2px solid rgb(254, 239, 179) !important;
+    border: 2px solid rgb(224, 75, 30) !important;
     
+}
+.required::placeholder {
+  color: rgb(224, 75, 30);
 }
 /* Fade in des messages d'erreurs */
 .error-div {
